cmake_minimum_required(VERSION 3.10)

# Set the project name
project(arrayProject)

add_executable(dynamicArrays_problem1 src/dynamicArrays_problem1.cpp)
add_executable(dynamicArrays src/dynamicArrays.cpp)
# add_executable(dynamicArrays_34 src/dynamicArrays_34.cpp)
add_executable(staticArrays src/staticArrays.cpp)