cmake_minimum_required(VERSION 3.10)

# Set the project name
project(MyCppProject)

# Add an executable
add_executable(for_each src/for_each.cpp)
add_executable(for_each_2 src/for_each_Lambda.cpp)
add_executable(cstyle_string src/cstyle_string.cpp)
add_executable(test src/test.cpp)
add_executable(mininumChairs src/minimunChairs.cpp)
